--- a/vito2/config.env
+++ b/vito2/config.env
@@ -5,7 +5,7 @@ APP_ID = "11381402"
 API_HASH = "349d6f6868d82dc82c7a9b356051f035"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "6116051556:AAHwM8cXA2LINu-7RHZ8eMClsCeObMlyUec"
+TG_BOT_TOKEN = "6145517238:AAEL7gS19ac75eJdBz4C5LovKc6eMtzMQCw"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
@@ -16,18 +16,18 @@ OWNER = "0"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_GROUP = -1001690330709
+FORCE_SUB_GROUP = -1001905395701
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = -1001918654157
+FORCE_SUB_CHANNEL = -1001825112330
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -1001922365892
+CHANNEL_ID = -1001845320490
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = "postgres://xlscwjfu:WGALZGYUOv8U50WkvRHPVvnSRsSwhTiB@silly.db.elephantsql.com/xlscwjfu"
+DATABASE_URL = "postgres://mjjjrnfe:jK4A9Gu04q7rE3n68D3vCnVEYFG-zOeo@silly.db.elephantsql.com/mjjjrnfe"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
